# RATTT

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md
agent/: Cargo.toml
agent/core/: Cargo.toml
agent/core/src/: audit_log.rs  commands.rs  config.rs  consent.rs  crypto.rs  enrolment.rs  heartbeat.rs  main.rs  metrics.rs  secure_storage.rs  updater.rs  ws_client.rs
backend/: Dockerfile  requirements.txt
backend/app/: config.py  database.py  main.py  redis_client.py
backend/app/api/: audit.py  auth.py  commands.py  devices.py  enrolment.py  updates.py
backend/app/auth/: jwt.py  policy.py
backend/app/models/: audit.py  device.py  enrolment.py  update.py  user.py
backend/app/services/: audit_service.py  command_service.py  device_service.py  enrolment_service.py
backend/app/ws/: agent_ws.py  connection_manager.py  dashboard_ws.py
backend/casbin/: model.conf  policy.csv
dashboard/: .gitignore  Dockerfile  next.config.js  package.json  tsconfig.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/audit/: page.tsx
dashboard/src/app/devices/: page.tsx
dashboard/src/app/devices/[id]/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/hooks/: useDeviceStatus.ts
deploy/: docker-compose.yml  enrolment-token.sh  generate-certs.sh  mac-mini-server-setup.sh  macos-installer.sh  windows-installer.ps1
deploy/android/: AndroidManifest.xml  MainActivity.kt  build.gradle
deploy/certs/: server.ext
docs/: api-reference.md  architecture.md  dashboard-customization.md  getting-started.md  threat-model.md
(+1 files in other folders)
