[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["logging"] }
rustls-pemfile = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sysinfo = "0.30"
aes-gcm = "0.10"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
# tray-icon = "0.14"  # TODO: Add back after cairo is available
dirs = "5.0"
hostname = "0.3"
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
